appId: com.cozyla.choresreward
name: Switch Day and Week tabs
---
- launchApp:
    clearState: false
    stopApp: true

- extendedWaitUntil:
    visible:
      id: "com.cozyla.choresreward:id/rv_family_daily_stat"
    timeout: 8000

- tapOn: "W"

- extendedWaitUntil:
    visible:
      id: "com.cozyla.choresreward:id/tl_2"
    timeout: 5000

- tapOn: "D"

- extendedWaitUntil:
    visible:
      id: "com.cozyla.choresreward:id/rv_family_daily_stat"
    timeout: 5000
